Update Hibernate ddl-auto setting for development and adjust data seeding limits